Revision history for perl distribution Convos

6.42 Not Released
 - Fix not adding space between channel name links
 - Avoid making #123 turn into channel links, since they are often pull request numbers

6.41 2021-12-18T14:58:00+0900
 - Add support for CONVOS_ACCESS_LOG (EXPERIMENTAL)
 - Add support for CONVOS_SYSLOG (EXPERIMENTAL)

6.40 2021-12-13T22:32:00+0900
 - Add clear search button #631
 - Add CSRF-check to /logout #632
   Contributors: Devendra Bhatla and Jamie Slome

6.39 2021-11-27T08:50:00+0900
 - Add file management to frontend #426
 - Add GET /files endpoint #426
 - Add DELETE /files/:uid/:fid endpoint #426

6.38 2021-11-26T08:46:00+0900
 - Use Crypt::Passphrase for password hashing #627
   Contributor: Stig Palmquist
 - Converted file upload into a core feature
 - Changed "/file" API endpoint to "/files"
 - Removed back compat /paste/:email_hash/:file_hash URL
 - Using "npm" (instead of "pnpm") to install node modules

6.37 2021-10-19T20:06:00+0900
 - Fix not having to enable and then disable notifications to disable notifications

6.36 2021-10-19T11:52:00+0900
 - Using convos/convos:base as base image to fix builds #624

6.35 2021-10-18T23:27:00+0900
 - Bumped Alpine version to 3.14
 - Fix "ReferenceError: body is not defined" #625

6.34 2021-10-18T11:00:00+0900
 - Going to build docker "stable" and "vX.XX" as linux/amd64 and linux/arm64,
   while "alpha" will be linux/amd64 only

6.33 2021-10-18T10:48:00+0900
 - Fix parsing links that end with a unicode character #563

6.32 2021-10-14T08:45:00+0900
 - Fix vulnerability: Cannot upload svg with javascript #623
 - Add support for password for default connection channel #621
 - Add progress bar for uploads

6.31 2021-10-02T06:51:00+0900
 - Fix turning channel names with "-" into links
 - Have to build a different tag for arm64 (for now) #464

6.30 2021-09-25T18:30:00+0900
 - Fix not making links inside links when #fragments are seen

6.29 2021-09-25T18:18:00+0900